# NexScout

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  plan.md  prompt.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  developer-guide.md  latex-templates.md  openclaw.md  runbook.md
examples/: profile.example.yaml
examples/split/: credentials.yaml  profile.yaml  settings.yaml
scripts/: README.md
scripts/common/: clear_db.py  generate_config.py  set_model.py
scripts/linux/: _common.sh  clear-db.sh  dashboard-link.sh  set-model.sh  start-direct.sh  start-docker.sh  start-uv.sh  stop.sh
scripts/windows/: _common.ps1  clear-db.ps1  dashboard-link.ps1  set-model.ps1  start-direct.ps1  start-docker.ps1  start-uv.ps1  stop.ps1
src/nexscout/: __init__.py  __main__.py  cli.py  pipeline.py  wizard.py
src/nexscout/agent_backends/: __init__.py  claude_code.py  native.py  openai_assistant.py
src/nexscout/apply/: __init__.py  agent.py  dashboard.py  email_browser.py  form_filler.py  orchestrator.py  policy.py  prompt.py  result_codes.py  tools.py
src/nexscout/browser/: __init__.py  driver.py  pool.py  stealth.py
src/nexscout/captcha/: __init__.py  anticaptcha.py  base.py  capsolver.py  detect.py  inject.py  twocaptcha.py
src/nexscout/core/: __init__.py  bundle.py  config.py  database.py  errors.py  logging.py  logsetup.py  pipeline_status.py  profile.py  (+1 more)
tests/: conftest.py
tests/integration/: test_web_routes.py
tests/unit/: test_agent_backends.py  test_anticaptcha.py  test_apply_acquire.py  test_apply_agent.py  test_apply_dashboard.py  test_apply_email_browser.py  test_apply_form_filler.py  test_apply_orchestrator_worker.py  test_apply_policy.py  test_apply_prompt_builder.py  test_apply_result_codes.py  test_apply_tools.py  test_apply_tools_read_page.py  test_browser_pool.py  test_captcha_detect_js_constant.py  test_captcha_inject_js.py  test_captcha_optional.py  test_captcha_solvers.py  test_captcha_taskmap.py  test_channel_selection.py  test_cli_full.py  test_config.py  test_core_coverage.py  test_database.py  test_discovery_filters.py  test_enrichment_full.py  test_enrichment_tier1.py  test_enrichment_tier2.py  test_enrichment_url_resolve.py  test_jobspy_full.py  test_latex_filter.py  test_llm_providers.py  test_mcp_server.py  test_openai_compat_provider.py  test_openclaw_discord.py  test_openclaw_manifest.py  test_openclaw_memory.py  test_openclaw_skill.py  test_openclaw_telegram.py  test_openclaw_tick.py  (+30 more)
(+78 files in other folders)
